test to use List.of()